Setup devDependencies and dist folder

--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "author": "Shahmir Khan Jadoon",
   "license": "MIT",
   "scripts": {
-    "serve": "live-server public/",
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
@@ -23,8 +22,6 @@
     "css-loader": "0.28.4",
     "express": "^4.17.1",
     "extract-text-webpack-plugin": "^3.0.2",
-    "live-server": "^1.2.1",
-    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
@@ -40,7 +37,10 @@
     "style-loader": "0.18.2",
     "uuid": "^3.3.2",
     "validator": "8.0.0",
-    "webpack": "3.1.0",
+    "webpack": "3.1.0"
+  },
+  "devDependencies": {
+    "live-server": "^1.2.1",
     "webpack-dev-server": "2.5.1"
   }
 }
