--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.24.0",
     "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
+    "numeral": "^2.0.6",
     "react": "^16.8.6",
     "react-addons-shallow-compare": "^15.6.2",
     "react-dates": "^20.2.5",
