--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "css-loader": "0.28.4",
     "express": "^4.17.1",
     "extract-text-webpack-plugin": "^3.0.2",
+    "firebase": "^6.3.1",
     "moment": "^2.24.0",
     "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
@@ -34,6 +35,7 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
     "uuid": "^3.3.2",
@@ -41,6 +43,8 @@
     "webpack": "3.1.0"
   },
   "devDependencies": {
+    "cross-env": "^5.2.0",
+    "dotenv": "^8.0.0",
     "live-server": "^1.2.1",
     "webpack-dev-server": "2.5.1"
   }
