--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "firebase": "^6.3.1",
+    "history": "^4.9.0",
     "moment": "^2.24.0",
     "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
